--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque blanditiis tenetur facere eligendi voluptatem nobis inventore assumenda doloremque voluptates. Autem voluptatum fugiat distinctio, unde dolore illum necessitatibus impedit modi eius?
     </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A illum ipsum soluta similique ratione modi accusantium praesentium quas maiores molestias repellendus unde sapiente, saepe magni sed, eum asperiores magnam commodi?</p>
-    
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
